force-app/main/default/objects/PO_Product__c/PO_Product__c.object-meta.xml
<CustomObject>
    <label>PO Product</label>
    <nameField>
        <displayFormat>OP-{000000}</displayFormat>
        <label>PO Product ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>