force-app/main/default/objects/PO_Product__c/fields/CURRENCY1__c.field-meta.xml
<CustomField>
    <fullName>CURRENCY1__c</fullName>
    <formula>Purchase_Order__r.Currency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CURRENCY</label>
    <type>Text</type>
</CustomField>