force-app/main/default/objects/PO_Product__c/fields/Prodname__c.field-meta.xml
<CustomField>
    <fullName>Prodname__c</fullName>
    <formula>Productname__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prodname</label>
    <type>Text</type>
</CustomField>