force-app/main/default/objects/PO_Product__c/fields/Productname__c.field-meta.xml
<CustomField>
    <fullName>Productname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>HaravanProductVariant__c</referenceTo>
    <relationshipLabel>PO Product</relationshipLabel>
    <relationshipName>PO_Product</relationshipName>
    <type>Lookup</type>
</CustomField>