force-app/main/default/objects/PO_Product__c/fields/Unitprice__c.field-meta.xml
<CustomField>
    <fullName>Unitprice__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>